# eltern_taxi_plattform

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  Cargo.toml  README.md  ReadMe.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/eltern_taxi_plattform/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
lib/database/: database_services.dart  todo_db.dart
lib/model/: todo.dart
lib/pages/: todos_page.dart
lib/widget/: create_todo_widget.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
rust/: Cargo.toml  example.db
rust-warp-jwt-example/: Cargo.toml
rust-warp-jwt-example/backend/: Cargo.toml  ReadMe.md
rust-warp-jwt-example/backend/src/: auth.rs  error.rs  main.rs
rust-warp-jwt-example/common/: Cargo.toml
rust-warp-jwt-example/common/src/: lib.rs
rust-warp-jwt-example/frontend/: Cargo.toml  ReadMe.md  index.html
rust-warp-jwt-example/frontend/src/app/: login.rs  mod.rs  settings.rs
rust-warp-jwt-example/src/: main.rs
rust/src/: main.rs
src/: auth.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
