[package]
name = "rust-warp-jwt-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
warp = "0.3"