[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
trunk = "0.19.1"
wasm-bindgen = "0.2.67"
serde_json = "1"
serde = {version = "=1.0", features = ["derive"] }
anyhow = "1"
yew-router = "0.18.0"
yew-hooks = "0.3.1"
common = { version = "0.1.0", path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]